Fix name alignment, add shadow to images

--- a/vn/src/components/LowerSectionBox/LowerSectionBox.css
+++ b/vn/src/components/LowerSectionBox/LowerSectionBox.css
@@ -1,5 +1,5 @@
 .LowerSectionBox {
-    border: 3px dashed #00ff00;
+    /* border: 3px solid #00ff00; */
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -14,5 +14,11 @@
         transparent
     );
 }
+
+/* .LowerSectionBox::before {
+    border: 5px solid rgba(0,0,0,.07);
+    border-radius: 2px;
+    filter: blur(4px);
+} */
 
 /* #00F5CB */
