--- a/vn/src/components/LowerSectionBox/Textbox/NameBox/NameBox.module.css
+++ b/vn/src/components/LowerSectionBox/Textbox/NameBox/NameBox.module.css
@@ -2,7 +2,7 @@
     /* border: 3px solid #ff00ff; */
     margin-right: 80%;
     margin-left: 20%;
-    padding: 1px 0px;
+    padding: 1px 0px 5px;
     position:absolute;
     width: 25%;
     height: 20%;
